frontend/test/should_fail/index_mm_min_max_edge.grg
#using "index_min_max_size_model.gm"

rule ri {
	n:N -e:E-> n;
	
	if { minEdgeFromIndex(fooi) in edgesFromIndex(bari); }
	
	modify {
	}
}
